# futuremind_data_warehouse

./: Makefile  README.md  pyproject.toml
data/: DIM_DISTRIBUTORS_202506161844.csv  DIM_MOVIES_202506160128.csv  FACT_REVENUE_202506160128.csv
src/: main.py  oracle_connection.py
src/pipeline/: distributor_loader.py  fact_revenue_loader.py  movie_loader.py
src/utils/: omdb_client.py
